--- a/beadando_f9zw0q/beadando_f9zw0q/beadando_f9zw0q.csproj
+++ b/beadando_f9zw0q/beadando_f9zw0q/beadando_f9zw0q.csproj
@@ -130,6 +130,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="segedosztaly.cs" />
     <Compile Include="Szín.cs">
       <DependentUpon>Model1.tt</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
