--- a/beadando_f9zw0q/beadando_f9zw0q/beadando_f9zw0q.csproj
+++ b/beadando_f9zw0q/beadando_f9zw0q/beadando_f9zw0q.csproj
@@ -70,71 +70,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="adatbazisDataSet.Designer.cs">
+    <Compile Include="Adatbázis\adatbazisDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>adatbazisDataSet.xsd</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="eddigirendelesek_ablak.cs">
+    <Compile Include="Megjelenítés\eddigirendelesek_ablak.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="eddigirendelesek_ablak.Designer.cs">
+    <Compile Include="Megjelenítés\eddigirendelesek_ablak.Designer.cs">
       <DependentUpon>eddigirendelesek_ablak.cs</DependentUpon>
     </Compile>
-    <Compile Include="Excelmenedzser.cs" />
-    <Compile Include="Fazon.cs">
+    <Compile Include="Segéd\Excelmenedzser.cs" />
+    <Compile Include="Adatbázis\Fazon.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Megjelenítés\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Megjelenítés\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
+    <Compile Include="Adatbázis\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.cs">
+    <Compile Include="Adatbázis\Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Designer.cs">
+    <Compile Include="Adatbázis\Model1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Méret.cs">
+    <Compile Include="Adatbázis\Méret.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="rendeles_ablak.cs">
+    <Compile Include="Megjelenítés\rendeles_ablak.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="rendeles_ablak.Designer.cs">
+    <Compile Include="Megjelenítés\rendeles_ablak.Designer.cs">
       <DependentUpon>rendeles_ablak.cs</DependentUpon>
     </Compile>
-    <Compile Include="Rendelés.cs">
+    <Compile Include="Adatbázis\Rendelés.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Ruhadarab.cs">
+    <Compile Include="Adatbázis\Ruhadarab.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="segedosztaly.cs" />
-    <Compile Include="Szín.cs">
+    <Compile Include="Segéd\segedosztaly.cs" />
+    <Compile Include="Adatbázis\Szín.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Termék.cs">
+    <Compile Include="Adatbázis\Termék.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="eddigirendelesek_ablak.resx">
+    <EmbeddedResource Include="Megjelenítés\eddigirendelesek_ablak.resx">
       <DependentUpon>eddigirendelesek_ablak.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Megjelenítés\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -146,28 +146,28 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="rendeles_ablak.resx">
+    <EmbeddedResource Include="Megjelenítés\rendeles_ablak.resx">
       <DependentUpon>rendeles_ablak.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="adatbazisDataSet.xsc">
+    <None Include="Adatbázis\adatbazisDataSet.xsc">
       <DependentUpon>adatbazisDataSet.xsd</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="adatbazisDataSet.xsd">
+    <None Include="Adatbázis\adatbazisDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>adatbazisDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="adatbazisDataSet.xss">
+    <None Include="Adatbázis\adatbazisDataSet.xss">
       <DependentUpon>adatbazisDataSet.xsd</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <EntityDeploy Include="Model1.edmx">
+    <EntityDeploy Include="Adatbázis\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Model1.edmx.diagram">
+    <None Include="Adatbázis\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
@@ -200,19 +200,19 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="adatbazis.mdf">
+    <Content Include="Adatbázis\adatbazis.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="adatbazis_log.ldf">
+    <Content Include="Adatbázis\adatbazis_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>adatbazis.mdf</DependentUpon>
     </Content>
-    <Content Include="Model1.Context.tt">
+    <Content Include="Adatbázis\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Model1.tt">
+    <Content Include="Adatbázis\Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
